graalvm add measure annotation and demo json file

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ group = 'org.fsk'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = '17'
 }
 
 configurations {
@@ -35,31 +35,17 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-graalvmNative {
-    binaries {
-        main {
-            javaLauncher = javaToolchains.launcherFor {
-                languageVersion = JavaLanguageVersion.of("21")
-                vendor = JvmVendorSpec.matching("GraalVM Community")
-            }
-        }
-    }
-    binaries.configureEach {
-        resources.autodetect()
-        buildArgs.addAll([
-                '--no-fallback',
-                '--enable-all-security-services',
-        ])
-    }
+dependencies {
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '3.2.1'
 
-    toolchainDetection = false
 }
 
 bootBuildImage {
     // paketobuildpacks/builder:0.3.288-base
     // paketobuildpacks/builder:0.1.390-tiny
     // paketobuildpacks/builder:0.1.374-tiny
-    //builder = 'paketobuildpacks/builder:0.1.374-tiny'
+    builder = 'paketobuildpacks/builder:0.1.374-tiny'
     environment = [
             "JAVA_TOOL_OPTIONS":"-Xmx16384M",
             'BP_NATIVE_IMAGE': 'true'
