--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ group = 'org.fsk'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '3.2.1'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -35,20 +36,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-dependencies {
-// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '3.2.1'
-
-}
-
 bootBuildImage {
-    // paketobuildpacks/builder:0.3.288-base
-    // paketobuildpacks/builder:0.1.390-tiny
-    // paketobuildpacks/builder:0.1.374-tiny
-    builder = 'paketobuildpacks/builder:0.1.374-tiny'
+    builder = 'paketobuildpacks/builder-jammy-full'
     environment = [
             "JAVA_TOOL_OPTIONS":"-Xmx16384M",
             'BP_NATIVE_IMAGE': 'true'
     ]
-
 }
